# mathematics_toolbox

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: mathematicstoolbox_ci.yaml  reuse-build.yaml
tests/: Makefile
tests/eigen3_hello_world/: CMakeLists.txt  Dockerfile.eigen3_hello_world  eigen3_hello_world.cpp
tests/osqp_hello_world/: CMakeLists.txt  Dockerfile.osqp_hello_world  osqp_hello_world.cpp
